trying maven with docker