@@ -2,5 +2,4 @@ FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
 ADD target/service.jar service.jar
 EXPOSE ${PORT:-8080}
-ENV JAVA_OPTS="-XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+UseConcMarkSweepGC"
-CMD ["java", "-jar", "service.jar"]
+CMD ["java", "-jar", "service.jar", "-Xms510k", "-Xmx:256m"]
